zeus_ss = ss.source_set()
#zeus_ss.add(files(
#    'boot.c',
#))
#common_ss.add(when: 'CONFIG_ZEUS_VIRT', if_true: files('fw_cfg.c'))
#zeus_ss.add(when: 'CONFIG_ZEUS_VIRT', if_true: files(
#  'virt-fdt-build.c',
#  'virt.c'))
#zeus_ss.add(when: 'CONFIG_ACPI', if_true: files('virt-acpi-build.c'))

hw_arch += {'zeus': zeus_ss}
